# cuda_CFD_fire

./: CMakeLists.txt  README.md
src/: main.cu
src/cudainl/: cuda_array.cuh  smoke_sim.cuh
src/utils/: disable_copy.h  hpc_helper.h  writevdb.cpp  writevdb.h
